change the language of README.md and add license info to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "ckanext-feedback"
 version = "0.1.0"
 description = "The extension to feedback on CKAN datasets such as review, number of downloads,use-cases,resolved-problems, and way of use"
 authors = ["C3Lab <info.c3lab@gmail.com>"]
-license = "TBD"
+license = "GNU Affero General Public License v3.0"
 readme = "README.md"
 repository = "https://github.com/c-3lab/ckanext-feedback/"
 documentation = "https://github.com/c-3lab/ckanext-feedback/README.md"
