added a set of files for building the ckanext-feedback development environment (#5)
* Created the development environment for ckanext-feedback

* Added a line to ignore the CKAN submodule

* Added CKAN submodule

* Changed docker-compose.yml to be used as an override for the official docker-compose.yml

* Added a directory for the ckanext-feedback extension source code

* Added custom cli.py and create.py files to run custom CKAN create commands.

* Removed unused imports

* Moved cli.py and create.py to the misc/ folder and changed their copy paths in setup.sh

* added the directory to develop ckanext-feedback (#4)

* added the directory to develop ckanext-feedback

* delete unwanted data and match pattern2

* delete .gitignore which automatically created in ckanext directory

* create directories in ckanext/feedback which is from the begining

* move .github and MANIFEST.in from ckanext's directory and modify setup.py

* delete MANIFEST.in, setup.py and setup.cfg

* add infomation about MANIFEST.in to pyproject.toml

* modify test.yml to match poetry environment

* add sentence to install poetry

* add sentence to pass through the path of poetry

* add Path to poetry

* add sentences to install Python3.8.16

* fix the error of wget

* run cd to return to run poetry

* add sentenceto return to run poetry

* add test.ini file to run test

* add pytest-ckan to complete test

* delete comment because it may have bad effect to test

* add sudo before sed command to give permission

* move sed command at the first of install requirement

* add steps to install python3.8.16

* to test if not install python3.8.15

* change name in test.ini to match the ckanext name in pyproject.toml

* test if test.yml is default

* comment out sentences which have error

* back to python3.8.16 in pyproject.toml

---------

Co-authored-by: TokioMiyaoka <gin@AlterEgo.local>

* Changed file to ignore only ignore the "

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# In order to not upload CKAN source code, ignore everything in development/external
+development/external
