--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,24 @@ repository = "https://github.com/c-3lab/ckanext-feedback/"
 documentation = "https://github.com/c-3lab/ckanext-feedback/README.md"
 keywords = ["ckan", "ckan extension", "opendata", "open-data", "review"]
 classifiers = [
-"Programming Language :: Python :: 3.8",
+    "Development Status :: 4 - Beta",
+    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
+    "Programming Language :: Python :: 3.8",
 ]
+packages = [
+    { include = "ckanext" },
+    { include = "README.md" },
+    { include = "LICENSE" }
+]
+
+[tool.poetry.plugins."ckan.plugins"]
+feedback = "ckanext.feedback.plugin:FeedbackPlugin"
+
+[tool.poetry.plugins."babel.extractors"]
+ckan = "ckan.lib.extract:extract_ckan"
+
+[tool.setuptools.packages.find]
+exclude = ["development", "**/test*"]
 
 [tool.poetry.dependencies]
 python = "3.8.16"
