Exclude tmp and build directory from flake8 target

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ extend-ignore = "E203,W503,W504"
 inline-quotes = "single"
 multiline-quotes = "single"
 docstring-quotes = "single"
+exclude = "tmp, build"
 
 [tool.black]
 skip-string-normalization = true
