replace create.py to install ckan command create table (#6)
* replace create.py to install ckan command create table

* delete some words which dont need

* rename create.py to feedback.py and rewrite cli.py create to feedback to use feedback command

* add feedback.py to take feedback

* set default of ckan db setting and change where commit() is

* add execute of download module

* integrate if and for to change for xxxxx in modules

* change bool(modules) for modules is None

* add s which forgets attaching module

* move and integrate CLEAN at the first of init action

* rename incorrect names

* exit from programme if error occurs

* format the programme

* change if statement to do action after cleaning

* add 1 as an argument of exit

* add README.md about ckan command 'feedback init'

* modify README.md about ckan command

* modify README.md about color of sentences

* add explanation about information of postgresql

* delete README.md

* change option name from --name to -dbname

* delete feedback commnad from cli.py

* change the location of feedback.py

* change from \' to "

* add environment variable in click.option

* delete short_help about click.group

* add explanation about feedback command

* change cur and conn to cursor and connection

* change the order of get_connection's argument

* delete else to reduce the nest

* put together error process

* move README.md about ckan command from misc to docs

* add comment to example code

* delete cli.py and modify setup.sh because of movement of feedback.py

* change double-quart to single-quart

* add explanation about config file

* modify explanation about config file

* create function of drop tables and delete sql sentences

* create function of creating utilization tables

* create function of creating resource tables

* create function of creating download tables

* change double-quart to single-quart of sql senten

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ python = "3.8.16"
 
 [tool.poetry.group.dev.dependencies]
 pyproject-flake8 = "^6.0.0.post1"
+flake8-quotes = "^3.3.2"
 black = "^22.12.0"
 isort = "^5.11.4"
 pytest = "^7.2.1"
@@ -46,6 +47,12 @@ build-backend = "poetry.core.masonry.api"
 [tool.flake8]
 max-line-length = 88
 extend-ignore = "E203,W503,W504"
+inline-quotes = "single"
+multiline-quotes = "single"
+docstring-quotes = "single"
+
+[tool.black]
+skip-string-normalization = true
 
 [tool.isort]
 include_trailing_comma = true
