create plugin.py for download

--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - ckan_config:/etc/ckan
       - ckan_home:/usr/lib/ckan
       - ckan_storage:/var/lib/ckan
+      - ../../ckanext-feedback:/usr/lib/ckan/venv/src/ckanext-feedback
+    tty: true
       # Mount the root directory from within development/external/ckan/contrib/docker
       - ../../../../../:/opt/ckanext-feedback
       - /opt/ckanext-feedback/development/
