Added css for package_item.html and split webassets css declarations

--- a/ckanext/feedback/assets/webassets.yml
+++ b/ckanext/feedback/assets/webassets.yml
@@ -7,14 +7,14 @@
 #     preload:
 #       - base/main
 
-feedback-tooltip-css:
-  filter: cssrewrite
-  output: feedback/%(version)s-tooltip.css
-  contents:
-    - css/tooltip.css
-    
-feedback-css:
+feedback-search-css:
   filter: cssrewrite
   output: feedback/%(version)s-search.css
   contents:
     - css/search.css
+  
+feedback-package-item-css:
+  filter: cssrewrite
+  output: feedback/%(version)s-package_item.css
+  contents:
+    - css/package_item.css
