--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ exclude = ["development", "**/test*"]
 
 [tool.poetry.dependencies]
 python = "3.8.16"
+sqlalchemy = "1.3.5"
+psycopg2 = "2.9.3"
 
 [tool.poetry.group.dev.dependencies]
 pyproject-flake8 = "^6.0.0.post1"
