--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ exclude = "tmp, build"
 skip-string-normalization = true
 
 [tool.isort]
+profile = "black"
 include_trailing_comma = true
 line_length = 88
 multi_line_output = 3
