--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ psycopg2 = "2.9.3"
 [tool.poetry.group.dev.dependencies]
 pyproject-flake8 = "^6.0.0.post1"
 flake8-quotes = "^3.3.2"
-black = "^22.12.0"
+black = "^23.1.0"
 isort = "^5.11.4"
 pytest = "^7.2.1"
 pytest-cov = "^4.0.0"
@@ -56,6 +56,7 @@ exclude = "tmp, build"
 
 [tool.black]
 skip-string-normalization = true
+preview = true
 
 [tool.isort]
 profile = "black"
