--- a/ckanext/feedback/assets/webassets.yml
+++ b/ckanext/feedback/assets/webassets.yml
@@ -30,3 +30,9 @@ feedback-details-css:
   output: feedback/%(version)s-details.css
   contents:
     - css/details.css
+
+feedback-registration-css:
+  filter: cssrewrite
+  output: feedback/%(version)s-registration.css
+  contents:
+    - css/registration.css
