--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,11 +30,13 @@ exclude = ["development", "**/test*"]
 
 [tool.poetry.dependencies]
 python = "3.8.16"
+sqlalchemy = "1.3.5"
+psycopg2 = "2.9.3"
 
 [tool.poetry.group.dev.dependencies]
 pyproject-flake8 = "^6.0.0.post1"
 flake8-quotes = "^3.3.2"
-black = "^22.12.0"
+black = "^23.1.0"
 isort = "^5.11.4"
 pytest = "^7.2.1"
 pytest-cov = "^4.0.0"
@@ -50,11 +52,14 @@ extend-ignore = "E203,W503,W504"
 inline-quotes = "single"
 multiline-quotes = "single"
 docstring-quotes = "single"
+exclude = "tmp, build"
 
 [tool.black]
 skip-string-normalization = true
+preview = true
 
 [tool.isort]
+profile = "black"
 include_trailing_comma = true
 line_length = 88
 multi_line_output = 3
