--- a/ckanext/feedback/assets/webassets.yml
+++ b/ckanext/feedback/assets/webassets.yml
@@ -13,6 +13,12 @@ feedback-search-js:
   contents:
     - js/search.js
 
+feedback-edit-js:
+  filter: rjsmin
+  output: ckanext-feedback/%(version)s-edit.js
+  contents:
+    - js/edit.js
+
 feedback-search-css:
   filter: cssrewrite
   output: feedback/%(version)s-search.css
