--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,29 @@ isort = "^5.11.4"
 pytest = "^7.2.1"
 pytest-cov = "^4.0.0"
 mypy = "^0.991"
+poethepoet = "^0.18.1"
+babel = "2.7.0"
+jinja2 = "2.10.1"
+markupsafe = "1.1.1"
+ckan = "2.9.7"
+flask = "1.1.1"
+itsdangerous = "1.1.0"
+werkzeug = {version = "1.0.0", extras = ["watchdog"]}
+polib = "1.0.7"
+flask-babel = "1.0.0"
+simplejson = "3.10.0"
+pyutilib = "5.7.1"
+tzlocal = "1.3"
+dominate = "2.4.0"
+markdown = "3.4.1"
+bleach = "3.1.4"
+alembic = "1.0.0"
+requests = "2.25.1"
+passlib = "1.6.5"
+python-magic = "0.4.15"
+pyyaml = "5.4.1"
+webassets = "0.12.1"
+pyjwt = "1.7.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -63,3 +86,31 @@ profile = "black"
 include_trailing_comma = true
 line_length = 88
 multi_line_output = 3
+
+[tool.poe.tasks]
+babel-extract = """
+pybabel extract --keywords 'translate isPlural'
+                --add-comments TRANSLATORS:
+                --output-file ckanext/feedback/i18n/ckanext-feedback.pot
+                --width 80
+                --mapping-file babel.cfg
+                --project ckanext-feedback
+                --version 0.1.0
+                ckanext
+"""
+babel-init = """
+pybabel init --domain ckanext-feedback
+             --input-file ckanext/feedback/i18n/ckanext-feedback.pot
+             --output-dir ckanext/feedback/i18n
+"""
+babel-update = """
+pybabel update --domain ckanext-feedback
+               --input-file ckanext/feedback/i18n/ckanext-feedback.pot
+               --output-dir ckanext/feedback/i18n
+               --previous
+"""
+babel-compile = """
+pybabel compile --domain ckanext-feedback
+                --directory ckanext/feedback/i18n
+                --statistics
+"""
