--- a/ckanext/feedback/assets/webassets.yml
+++ b/ckanext/feedback/assets/webassets.yml
@@ -7,14 +7,14 @@
 #     preload:
 #       - base/main
 
+feedback-search-css:
+  filter: cssrewrite
+  output: feedback/%(version)s-search.css
+  contents:
+    - css/search.css
+
 feedback-tooltip-css:
   filter: cssrewrite
   output: feedback/%(version)s-tooltip.css
   contents:
     - css/tooltip.css
-    
-feedback-css:
-  filter: cssrewrite
-  output: feedback/%(version)s-search.css
-  contents:
-    - css/search.css
