Feature/utilization registration (#12)
* Add registration functionality

* Update necessary blocks only to keep CKAN original behavior such as flash messages

* Move message declaration to controller

---------

Co-authored-by: Sheile <sheile1024@gmail.com>

--- a/ckanext/feedback/assets/webassets.yml
+++ b/ckanext/feedback/assets/webassets.yml
@@ -13,6 +13,12 @@ feedback-search-js:
   contents:
     - js/search.js
 
+feedback-registration-js:
+  filter: rjsmin
+  output: ckanext-feedback/%(version)s-registration.js
+  contents:
+    - js/registration.js
+
 feedback-search-css:
   filter: cssrewrite
   output: feedback/%(version)s-search.css
