Add issue resolution test

--- a/ckanext/feedback/tests/config/test.ini
+++ b/ckanext/feedback/tests/config/test.ini
@@ -4,12 +4,14 @@ smtp_server = localhost
 error_email_from = ckan@localhost
 
 [app:main]
-use = config:../ckan/test-core.ini
+use = config:/usr/lib/ckan/venv/src/ckan/test-core.ini
 
 # Insert any custom config settings to be used when running your extension's
 # tests here. These will override the one defined in CKAN core's test-core.ini
 ckan.plugins = feedback
-
+sqlalchemy.url = postgresql://ckan:ckan@db/ckan_test
+datastore.write.url = postgresql://ckan:ckan@db/datastore_test
+datastore.read.url = postgresql://datastore_ro:ckan@db/datastore_test 
 
 # Logging configuration
 [loggers]
