Add management comments (#39)
* Add admin templates and views

* Change the header link

* Add tab menu

* Display categories to management commnets window

* Display utilization commnets to management comments

* Add link to utilization comments

* Fix typo and Display result count

* Add management_comments.js

* Implement to filter by checkbox

* Add bulk approval and delete button

* Add process of form

* Add bulk approval utilization comments service

* Add function of changing all checkbox

* Add flash message

* Rename comments.css to management-comments.css

* Format all code

* Refactor template in management comments

* Move bulk update and delete to services/management/comments.py

* Extract len function from _()

* Add refresh comments

* Fix to single quote

* Refactor js code

* Chack all checkbox when executing refreshTable

* Add comment to service/management/comments.py

* Display resouce comments to management comments

* Refresh table when calling onclick

* Add bulk action of resouce comment

* Keep the tab info

* Add condition when rows is empty

* Support refresh rating for management comments

* Remove to check admin from management comments template

* Remove unnecessary block from management comments template

* Checkout template utilization detail to HEAD of main

* Checkout assets css search  to HEAD of main

* Checkout utilization summary service  to HEAD of main

* Remove condition of displaying  header

* Add check_administrator to management controller

--- a/ckanext/feedback/assets/webassets.yml
+++ b/ckanext/feedback/assets/webassets.yml
@@ -31,11 +31,23 @@ feedback-comment-js:
   contents:
     - js/comment.js
 
+feedback-management-comments-js:
+  filter: rjsmin
+  output: ckanext-feedback/%(version)s-management_comments.js
+  contents:
+    - js/management_comments.js
+
 feedback-search-css:
   filter: cssrewrite
   output: feedback/%(version)s-search.css
   contents:
     - css/search.css
+
+feedback-management-comments-css:
+  filter: cssrewrite
+  output: feedback/%(version)s-comments.css
+  contents:
+    - css/management_comments.css
 
 feedback-tooltip-css:
   filter: cssrewrite
